Fix spacing on mobile

--- a/src/TabBar-style.css
+++ b/src/TabBar-style.css
@@ -94,6 +94,22 @@
 }
 
 
+.text-block {
+  padding-top: 3rem;
+  padding-bottom: 4rem;
+  padding-left: 10%;
+  padding-right: 10%;
+  display: flex;
+  flex-direction: column;
+  gap: 1.25rem;
+  text-align: left;
+}
+
+.center-text {
+  text-align: center;
+}
+
+
 /* Sizing for Desktop: */
 @media only screen and (min-width: 768px) {
 
@@ -112,20 +128,10 @@
   .tab {
     font-size: 1.25rem;
   }
-}
 
-.text-block {
-  padding-top: 3rem;
-  padding-bottom: 4rem;
-  padding-left: 50rem;
-  padding-right: 50rem;
-  display: flex;
-  flex-direction: column;
-  gap: 1.25rem;
-  text-align: left;
-}
-
-.center-text {
-  text-align: center;
+  .text-block {
+    padding-left: 25%;
+    padding-right: 25%;
+  }
 }
   
